<resources>
    <string name="app_name">ScheduleServiceApp</string>
    <string name="menu_home_item">Home</string>
    <string name="menu_explore_item">Explorar</string>
    <string name="menu_schedule_item">Agenda</string>
    <string name="menu_profile_item">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_label">E-mail</string>
    <string name="senha_label">Senha</string>
    <string name="create_account_button_label">Não tem uma conta. toque aqui criar uma agora</string>
    <string name="login_action_label">ACESSAR</string>
    <string name="app_logo_accessibility">Logo do App</string>
</resources>